# clojure-test-suite

./: .gitignore  README.md  bb.edn  composer.json  deps-clr.edn  deps.edn  flake.nix  phel-config.php  project.clj  pyproject.toml
.github/workflows/: ci.yml
doc/: babashka.md  basilisp.md  clojure.md  clojureclr.md  clojurescript.md  phel.md  writing-tests.md
templates/: test-template.cljc
test/clojure/core_test/: abs.cljc  aclone.cljc  add_watch.cljc  ancestors.cljc  and.cljc  any_qmark.cljc  apply.cljc  assoc.cljc  assoc_bang.cljc  atom.cljc  bigdec.cljc  bigint.cljc  binding.cljc  bit_and.cljc  bit_and_not.cljc  bit_clear.cljc  bit_flip.cljc  bit_not.cljc  bit_or.cljc  bit_set.cljc  bit_shift_left.cljc  bit_shift_right.cljc  bit_test.cljc  bit_xor.cljc  boolean_qmark.cljc  bound_fn.cljc  bound_fn_star.cljc  byte.cljc  case.cljc  char.cljc  char_qmark.cljc  coll_qmark.cljc  compare.cljc  concat.cljc  conj.cljc  conj_bang.cljc  cons.cljc  constantly.cljc  contains_qmark.cljc  count.cljc  (+190 more)
test/clojure/edn_test/: read_string.cljc
test/clojure/string_test/: blank_qmark.cljc  capitalize.cljc  ends_with_qmark.cljc  escape.cljc  lower_case.cljc  replace.cljc  reverse.cljc  starts_with_qmark.cljc  upper_case.cljc
