[project]
name = "clojure-test-suite"
version = "0.1.0"
description = "Dialect-independent tests for clojure.core, focused on locking down how Clojure JVM behaves so that other dialects to reach parity."
authors = []
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "basilisp[pytest] @ git+https://github.com/basilisp-lang/basilisp@fix/test-runner-suffix",
   "pytest-xdist"
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"